<resources>
    <string name="app_name">Groupon</string>
    <string name="title_home">Featured</string>
    <string name="title_search">Explore</string>
    <string name="title_MyStuff">My Stuff</string>
    <string name="title_saved">Saved</string>
    <string name="title_notifications">Notifications</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_Name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Sign In</string>
    <string name="create_account">Create an Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="make_authorization_request">Google Sign In</string>
    <string name="hello_card">hello card</string>
    <string name="price">PRICE: </string>
    <string name="text_buy">BUY</string>
    <string name="checkout">CHECKOUT</string>
    <string name="quantity">QUANTITY</string>

</resources>
