<?xml version="1.0" encoding="utf-8"?>
<tabs xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <tab
            android:id="@+id/navigation_home1"
            android:icon="@drawable/ic_image_g"
            android:title="@string/title_home"
            app:showAsAction="ifRoom"/>

        <tab
            android:id="@+id/navigation_search1"
            android:icon="@drawable/ic_search"
            android:title="@string/title_search"
            app:showAsAction="ifRoom"/>

        <tab
            android:id="@+id/navigation_notifications1"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"
            app:showAsAction="ifRoom"/>

        <tab
            android:id="@+id/navigation_saved1"
            android:icon="@drawable/ic_image_saved"
            android:title="@string/title_saved"
            android:visible="false"/>

        <tab
            android:id="@+id/navigation_mystuff1"
            android:icon="@drawable/ic_no_photo"
            android:title="@string/title_MyStuff" />

    </tabs>