<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_image_g"
        android:title="@string/title_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_mystuff"
        android:icon="@drawable/ic_no_photo"
        android:title="@string/title_MyStuff" />

    <!--
    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_image_saved"
        android:title="@string/title_saved"/>
    -->

</menu>
