<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_shopProduct"
        android:layout_margin="9dp"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/shopProdImageInCard"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                />
            <TextView
                android:id="@+id/shopProdtextNameInCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/hello_card"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/shopProdtextQuantInCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/quantity" />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="82dp"
                android:layout_height="22dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@+id/shopProdtextQuantInCard" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/shopProdtextPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/priceText"
        android:layout_above="@+id/shopProdtextDescInCard"
        android:text="@string/price" />
    <TextView
        android:id="@+id/shopProdtextPriceInCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/priceText"
        android:layout_toEndOf="@id/shopProdtextPriceText"
        android:layout_above="@+id/shopProdtextDescInCard"
        android:text="@string/hello_card" />
    <TextView
        android:id="@+id/shopProdtextDescInCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_above="@+id/appCompatButtonBuy"
        android:text="@string/hello_card" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="18dp"
        android:background="@color/colorPrimary"
        android:text="@string/text_buy" />

</RelativeLayout>